--- a/stylus.css
+++ b/stylus.css
@@ -38,14 +38,15 @@ img {
   padding-top: 2rem;
   font-weight: bold;
   display: inline-block;
-  margin-left: 22%;
+  margin-left: 21%;
   width: 15%;
 }
 #txt4 {
   padding-top: 2rem;
   font-weight: bold;
   display: inline-block;
-  margin-left: 20%;
+  margin-left: 21%;
+  width: 15%;
 }
 
 #valor_a {
@@ -58,4 +59,9 @@ img {
 }
 #valor_c {
   width: 25%;
+}
+
+#bton {
+  text-align: center;
+  margin-top: 2rem;
 }
