--- a/stylus.css
+++ b/stylus.css
@@ -7,7 +7,7 @@ body {
 }
 
 #container {
-  width: 60%;
+  width: 80%;
   height: auto;
   background: white;
   border-radius: 0.5rem;
@@ -48,6 +48,12 @@ img {
   margin-left: 21%;
   width: 15%;
 }
+#txt5 {
+  width: 25%;
+  font-weight: bold;
+  margin-top: 2rem;
+  text-align: center;
+}
 
 #valor_a {
   width: 25%;
@@ -61,9 +67,21 @@ img {
   width: 25%;
 }
 
+#dec {
+  width: 25%;
+}
+
+#obs {
+  color: red;
+}
+
 #bton {
   text-align: center;
   margin-top: 2rem;
+}
+
+#RES {
+  font-size: 1.5rem;
 }
 
 footer {
