--- a/stylus.css
+++ b/stylus.css
@@ -76,8 +76,78 @@ footer {
 
 /*-----------------------Responsividade---------------------*/
 
-@media screen and (min-width: 1280px) {
+@media screen and (min-width: 1000px) {
   header {
     font-size: 4rem;
+  }
+
+  #container {
+    grid-template-columns: repeat(3, 1fr);
+    grid-template-rows: repeat(10, auto);
+    column-gap: 1rem;
+    row-gap: 0.5rem;
+  }
+
+  .txt1 {
+    font-size: 2rem;
+  }
+
+  .formula_img {
+    width: 80%;
+    margin-bottom: 1rem;
+  }
+
+  .txt1,
+  .formula_img {
+    grid-column: span 3;
+    align-self: center;
+    justify-self: center;
+  }
+
+  .texto_valores {
+    font-size: 1.2rem;
+    text-align: center;
+  }
+
+  .valor_a {
+    grid-column-start: 1;
+    grid-row-start: 4;
+  }
+
+  .valor_b {
+    grid-column-start: 2;
+    grid-row-start: 4;
+  }
+
+  .valor_c {
+    grid-column-start: 3;
+    grid-row-start: 4;
+  }
+
+  .casa_decimais {
+    margin-top: 1rem;
+    grid-column-start: 1;
+    grid-row-start: 5;
+  }
+
+  .dec {
+    grid-column-start: 1;
+    grid-row-start: 6;
+    grid-column: span 1;
+  }
+
+  .obs {
+    grid-column-start: 1;
+    grid-row-start: 7;
+  }
+
+  .bton {
+    grid-row-start: 8;
+    grid-column: span 3;
+  }
+
+  #RES {
+    grid-column: span 3;
+    font-size: 2rem;
   }
 }
